--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
 ---
 name: CI
-'on':
+on:
   pull_request:
   push:
     branches:
-      - master
-  schedule:
-    - cron: "0 4 * * 5"
+      - main
 
 defaults:
   run:
