--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v3
         with:
-          path: 'geerlingguy.pip'
+          path: 'socheatsok78.unsafe-pip'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v4
