--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,4 +4,7 @@ pip_package: python3-pip
 pip_executable: "{{ 'pip3' if pip_package.startswith('python3') else 'pip' }}"
 
 pip_install_packages: []
+
+# Ansible facts
+pip_externally_managed: false
 pip_break_system_packages_support: false
