--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   author: socheatsok78
   description: Upgrade `pip` to the latest version
   issue_tracker_url: https://github.com/soramitsukhmer-lab/ansible-role-unsafe-pip/issues
-  company: "Soramitsu (Khmer) Co.,LTD"
+  company: "Socheat Sok"
   license: "license (BSD, MIT)"
   min_ansible_version: "2.4"
   platforms: []
